r7:
+ World's destructor optimized. Needed due to soft-body preparation
+ Added Soft Body Implementation (Minimal). In the next releases the implementation will be improved.
  + Cloth
  + Rope

r6:
+ SVN Adjust

r5:
+ Added body orientation support to cone body
+ Doxygen documentation renewed

r4 [minor]:
+ adjusted error in doxygen documentation

IrrBP 0.1 (r3):
* First irrBP release
+ Added (minimal) Debug Drawer for bullet' world
+ Added Cone Twist Constraint
+ Set new flag (IRRBP_DEBUG_TEXT) to write debug text into the console.
+ Improved Bullet Manager

r2:
First SVN release