@@ -37,7 +37,7 @@ public:
 	void setConfig(btSoftBody::Config newConfig) { m_softBody->m_cfg = newConfig;}
 
 	/*Updates soft body triangle*/
-	virtual void update() = 0;
+	REALINLINE virtual void update() = 0;
 protected:
 	btSoftBody * m_softBody;
 };
