@@ -1,6 +1,6 @@
 #include <SoftBody/CIrrBPPatchSoftBody.h>
 #include "CIrrBpWorld.h"
-#include <vector>
+
 CIrrBPPatchSoftBody::~CIrrBPPatchSoftBody()
 {
 	if(mesh)
@@ -18,7 +18,6 @@ CIrrBPPatchSoftBody::CIrrBPPatchSoftBody(const vector3df & corner00 ,const vecto
 	this->resy = resy;
 	m_softBody = btSoftBodyHelpers::CreatePatch(world->getSoftBodyWorldInfo(),irrVectorToBulletVector(corner00),irrVectorToBulletVector(corner01),irrVectorToBulletVector(corner10),irrVectorToBulletVector(corner11), resx,resy,0,true);
 	m_softBody->setTotalMass(mass);
-	
 	btSoftBody::Material*	pm=m_softBody->appendMaterial();
 	m_softBody->randomizeConstraints();
 
@@ -89,7 +88,7 @@ void CIrrBPPatchSoftBody::createMesh()
 	material.BackfaceCulling = false;
 
 	buffer->Material = material;
-
+	
 	aabbox3df bbox;
 	btVector3 MinEdge,MaxEdge;
 	m_softBody->getAabb(MinEdge,MaxEdge);
